# Deep-Artificial-NeuralNetwork

./: CMakeLists.txt  LICENSE  Layer.h  NeuralNetwork.cpp  Neuron.cpp  README.md  main.cpp
DataSets/: Seed.csv
Network/: ClippedDoubleDQN.cpp  ClippedDoubleDQN.h  Layer.cpp  Layer.h  NeuralNetwork.cpp  NeuralNetwork.h  Neuron.cpp  Neuron.h  QActor.cpp  QActor.h
Network/Utils/: ActivationFunctions.h  Importer.cpp  Importer.h  Random.h  Tensor.h
SavedNetworks/: MNIST_Result  MNIST_Result_2
